distribution, receiving, cancelled feature
